<resources>
    <string name="app_name">Lingvo</string>
    <string name="title_tests">Tests</string>
    <string name="title_search">Search</string>
    <string name="title_user">User</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="text_credentials">Credentials</string>
    <string name="button_login">Log in</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
