<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_tests">

    <fragment
        android:id="@+id/navigation_tests"
        android:name="com.example.lingvo.ui.Tests.TestsFragment"
        android:label="@string/title_tests"
        tools:layout="@layout/fragment_tests" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.example.lingvo.ui.Search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/navigation_user"
        android:name="com.example.lingvo.ui.User.UserFragment"
        android:label="@string/title_user"
        tools:layout="@layout/fragment_user" />
</navigation>